# concordium-swift-sdk

./: .gitignore  .gitmodules  .swiftformat  CHANGELOG.md  Makefile  Package.resolved  Package.swift  README.md
.github/workflows/: build+test.yml  publish-release.yml
ExampleWallet/ExampleWallet/: ContentView.swift  ExampleWalletApp.swift  SeedPhraseValidator.swift
ExampleWallet/ExampleWallet.xcodeproj/: project.pbxproj
ExampleWallet/ExampleWalletTests/: ExampleWalletTests.swift  SeedPhraseValidatorTests.swift
Sources/Concordium/: HTTP.swift  LegacyWalletExport.swift  NodeClient.swift  Serial.swift  Util.swift  Wallet.swift  WalletAccount.swift  WalletIdentity.swift  WalletProxy.swift  WalletProxyEndpoints.swift  WalletSeed.swift
Sources/ConcordiumSwiftSDK/: Client.swift  Model.swift  NodeClient.swift  Wallet.swift
Sources/ConcordiumSwiftSdk/: ConcordiumHdWallet.swift  ConcordiumNodeClient.swift  ConcordiumWallet.swift  ConcordiumWalletSeed.swift  Error.swift  Http.swift  NodeClient.swift  NodeClientProtocol.swift  SeedBasedWallet.swift  TransactionHelper.swift  Transactions.swift  Util.swift  Wallet.swift  WalletAccount.swift  WalletIdentity.swift  WalletProxyClient.swift  WalletProxyEndpoints.swift  WalletProxyRequests.swift  WalletSeed.swift
Sources/concordium-swift-sdk/: concordium_swift_sdk.swift
Tests/ConcordiumSwiftSDKTests/: ClientTests.swift  CryptoTest.swift  GrpcClientTests.swift  (+3 more)
lib/crypto/: .gitignore  Cargo.toml  build.rs  build.sh
lib/crypto/ConcordiumWalletCrypto/: .gitignore  Package.swift
lib/crypto/src/: lib.rs  lib.udl
(+157 files in other folders)
