[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
name = "crypto"

[dependencies]
thiserror = "1.0.56"
uniffi = "0.25"
wallet_library = { path = "./concordium-base/rust-src/wallet_library" }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
