[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
name = "crypto"

[dependencies]
thiserror = "1"
uniffi = { version = "0.25", features = ["cli"] }
wallet_library = { path = "./concordium-base/rust-src/wallet_library" }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
